# Todo-Full-Stack-Web-Application

./: .gitignore  README.md  docker-compose.yml  requirements.txt  vercel.json
.specify/memory/: constitution.md
api/: main.py  pyproject.toml  requirements.txt  vercel.json
api/src/: main.py
backend/: main.py  pyproject.toml  requirements.txt  vercel.json
backend/api/: main.py  pyproject.toml
backend/docs/: deployment.md
backend/src/: database.py  main.py
backend/src/api/v1/: auth.py  tasks.py
backend/src/middleware/: auth.py
backend/src/models/: task.py  user.py
backend/tests/integration/: test_auth.py  test_tasks.py
backend/tests/unit/: test_task_model.py  test_user_model.py
frontend/: package-lock.json  package.json
frontend/app/: layout.tsx  not-found.tsx  page.tsx
frontend/app/forgot-password/: page.tsx
frontend/app/login/: page.tsx
frontend/app/signup/: page.tsx
frontend/app/tasks/: page.tsx
frontend/docs/: deployment.md
frontend/src/components/: AuthForm.tsx  TaskItem.tsx  TaskList.tsx
frontend/src/pages/: login.tsx  signup.tsx  tasks.tsx
frontend/src/services/: authService.ts  taskService.ts
frontend/src/utils/: token.ts
history/prompts/constitution/: 1-create-spec-constitution-for-todo-app-phase-ii.constitution.prompt.md
history/prompts/feature-todo-app/: 10-implement-todo-app-phase-ii.green.prompt.md
history/prompts/plan/: 3-generate-high-level-implementation-plan-for-phase-ii.plan.prompt.md
history/prompts/spec/: 2-create-spec-reference-file.spec.prompt.md
specs/001-spec-reference/: plan.md  spec.md  tasks.md
