[project]
name = "backend"
version = "0.1.0"
description = "Todo App Backend"
readme = "README.md"
requires-python = "3.12"
pythonpath = ["."]

dependencies = [
    "fastapi>=0.110.0",
    "uvicorn>=0.24.0",
    "sqlmodel>=0.0.31",
    "python-dotenv>=1.0.0",
    "passlib[bcrypt]>=1.7.4",
    "psycopg2-binary>=2.9.11"
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"