[project]
name = "backend"
version = "0.1.0"
description = "Backend for Todo Full-Stack Web Application"
readme = "README.md"
requires-python = ">=3.12"

pythonpath = ["."]
dependencies = [
    "fastapi[standard]>=0.128.0",
    "passlib[bcrypt]>=1.7.4",
    "python-dotenv>=1.2.1",
    "sqlmodel>=0.0.31",
    "psycopg2-binary>=2.9.11"
]