[project]
name = "backend"
version = "0.1.0"
description = "Backend for Todo Full-Stack Web Application"
readme = "README.md"
requires-python = ">=3.10"

pythonpath = ["."]
dependencies = [
    "fastapi==0.95.2",
    "pydantic==1.10.13",
    "uvicorn>=0.23.2",
    "sqlmodel==0.0.8",
    "psycopg2-binary>=2.9.11",
    "passlib[bcrypt]>=1.7.4",
    "python-dotenv>=1.2.1"
]